[project]
name = "logical"
version = "2.0.0"
description = """\
    Callable class derived from the tuple type for representing logical \
    operators/connectives based on their truth tables.\
    """
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/reity/logical"
Documentation = "https://logical.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=4.2.0",
    "sphinx-rtd-theme~=1.0.0"
]
test = [
    "pytest~=7.0",
    "pytest-cov~=3.0"
]
lint = [
    "pylint~=2.14.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.8",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools~=62.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=logical --cov-report term-missing"
